--- a/environment.yml
+++ b/environment.yml
@@ -9,9 +9,11 @@ dependencies:
   - scikit-learn
   - pandas
   - pytorch::pytorch=1.2.0
+  - joblib 
   - cxx-compiler # required by tick
   - dill # required by tick
   - swig # required by tick
+  - pip
   - pip:
     - tick==0.6.0
     - pynvml
